--- a/tatterdemalion.cabal
+++ b/tatterdemalion.cabal
@@ -9,5 +9,7 @@ executable site
                   , hakyll == 4.6.*
                   , containers
                   , pandoc
+                  , regex-tdfa
+                  , tagsoup
   ghc-options:      -threaded
   default-language: Haskell2010
