Effectful part 1 draft complete

--- a/tatterdemalion.cabal
+++ b/tatterdemalion.cabal
@@ -11,5 +11,6 @@ executable site
                   , pandoc
                   , regex-tdfa
                   , tagsoup
+                  , mtl
   ghc-options:      -threaded
   default-language: Haskell2010
