--- a/tatterdemalion.cabal
+++ b/tatterdemalion.cabal
@@ -6,11 +6,12 @@ cabal-version:      >= 1.10
 executable site
   main-is:          site.hs
   build-depends:    base == 4.*
-                  , hakyll == 4.6.*
                   , containers
+                  , hakyll == 4.6.*
+                  , mtl
                   , pandoc
                   , regex-tdfa
                   , tagsoup
-                  , mtl
+                  , transformers
   ghc-options:      -threaded
   default-language: Haskell2010
